# sigmaos

./: .gitignore  .gitmodules  build.sh  compile-proto.sh  create-gvisor-bundle.sh  go.mod  go.sum  make-cpp.sh  make-rs.sh  make.sh  start-kernel.sh  test.sh
apps/etcd/: etcd.go  etcd_test.go  job.go  shim.go
apps/hotel/: hotel_test.go
apps/imgresize/: imgresize_test.go  mgr.go
apps/memcached/: job.go  (+4 more)
aws/: add-instance.sh  mkvpc.py  run-benchmark.sh  scratch.sh  setup-instance.sh  start-sigmaos.sh
benchmarks/: benchmarks_test.go  cached_scaler_test.go  config.go  config_test.go  default_config.go  helpers_test.go  hotel_test.go  imgresize_test.go  ops_test.go  sebs_start_latency_test.go  start_latency_test.go
cloudlab/: run-benchmark.sh  scratch.sh  servers.txt  start-sigmaos.sh
container/: container.go
cpp/: CMakeLists.txt
dcontainer/: dcontainer.go
debug/: selector.go
docker/: target.Dockerfile
gvisor/: bundle.go  config.go  config.json  const.go  gvisor.go  gvisor_test.go
k8s/: clnt.go  pod.go
kernel/: kernel.go  srvs.go  subsystem.go
proc/: env.go  proc.go  proc.pb.go  proc.proto  proc_test.go
pycontainer/: pycontainer.go
rs/wasm/imgrec/: Cargo.toml
rs/wasm/imgrec/src/: lib.rs
scontainer/: scontainer.go
scripts/: bundle-proc-deps.py  bundle-sebs-procs.py  download-etcd.sh  download-memcached.sh  download-mobilenet-model-weights.sh  download-sebs-data.py  upload-sebs-inputs.py
shmem/: alloc.go  shmem.go
sigmaclnt/: sigmaclnt.go
sigmap/: named.go
test/: dialproxy.go  multirealmtest.go  test.go
tutorial/: 01_local_dev.md
(+182 files in other folders)
